change remember checkbox styles

--- a/mLingo/ClientApp/src/components/styles/Main.scss
+++ b/mLingo/ClientApp/src/components/styles/Main.scss
@@ -306,23 +306,47 @@ li.media h4 {
     margin: 0 !important;
   }
 
-  input[type=checkbox]{
-    border: 1px solid $dark-blue;
-    -moz-appearance:none;
-    -webkit-appearance:none;
-    -o-appearance:none;
-    width: 20px;
-    height: 20px;
-    border-radius: 5px;
-    transform: translate(-50%, 20%);
-  }
-  input[type=checkbox]:checked{
-    background-color: $dark-blue;
-    outline: none;
-  }
-    input[type=checkbox]:focus{
-      outline: none;
-  }
+  input[type="checkbox"] { display: none; }
+
+input[type="checkbox"] + label {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 20px;
+  font: 14px/20px 'Open Sans', Arial, sans-serif;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+input[type="checkbox"] + label:last-child { margin-bottom: 0; }
+
+input[type="checkbox"] + label:before {
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid $dark-blue;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: .6;
+  -webkit-transition: all .12s, border-color .08s;
+  transition: all .12s, border-color .08s;
+}
+
+input[type="checkbox"]:checked + label:before {
+  width: 10px;
+  top: -5px;
+  left: 5px;
+  border-radius: 0;
+  opacity: 1;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
 
 }
 .fbconnect,.ggconnect{
@@ -346,10 +370,11 @@ li.media h4 {
 
 .remember{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   font-size: 14px;
   color: $light-green;
+  text-shadow: 0.1em 0.1em 0.1em $dark-blue;
   margin-bottom: 88px !important;
 
   label{
