--- a/mLingo/ClientApp/src/components/styles/Main.scss
+++ b/mLingo/ClientApp/src/components/styles/Main.scss
@@ -33,14 +33,14 @@
   z-index: -999;
 }
 
-.container{
+main.container{
   background-color: #F8F8F8;
   overflow: hidden;
   padding: 50px;
 }
 
 @media(min-width: 576px){
-  .container{
+  main.container{
     border-radius: 70px;
   }
 }
@@ -58,6 +58,9 @@
   .navbar__brand--text {
     font-size: 14px !important;
   }
+  .searchbuttontext{
+    display: none;
+  }
 }
 
 @media (min-width: $desktop-res) {
@@ -73,12 +76,14 @@
   }
 }
 
+
+
 .searchbutton{
   font-size: 24px;
   color: white;
   background: inherit;
   border: none;
-  margin: 0;
+  margin: 0 0 0 10px;
   text-decoration: none;
 
 
@@ -167,16 +172,17 @@
   padding: 0 10px !important;
   display: flex;
   align-items: center;
+  max-width: 150px;
 }
 
 
 .navbar--dark {
   background: $dark-blue;
-  margin: 0 !important;
   border: 0 !important;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+
 }
 
 .navbar__registerbutton {
@@ -404,7 +410,6 @@ input[type="checkbox"]:checked + label:before {
 
 .footer {
   background: $dark-blue;
-  margin: 0 !important;
   width: 100%;
   height: 20vh;
   display: flex;
