--- a/mLingo/ClientApp/src/components/styles/Main.scss
+++ b/mLingo/ClientApp/src/components/styles/Main.scss
@@ -17,6 +17,7 @@
 
 /* Login Panel */
 /* 7. Main Panel */
+/* 8 Cards */
 
 
 /* UNUSED */
@@ -534,5 +535,42 @@ input[type="checkbox"]:checked + label:before {
   li {
     background-clip: unset !important;
     border: 0px !important;
+  }
+}
+
+/* 8 Cards */
+.createCard{
+
+  div{
+    margin: 0 5%;
+  }
+
+  .flashsquare{
+    width: 200px;
+    height: 200px;
+    border: 3px solid $dark-blue;
+    border-radius: 15px;
+    background: $light-green;
+  }
+
+  button{
+    padding: 10px 50px;
+    border: 3px solid $dark-blue;
+    border-radius: 15px;
+    background: $light-green;
+    color: $dark-blue;
+    font-weight: 900;
+    font-size: 16px;
+  }
+
+  h5{
+    color: $dark-blue;
+    font-size: 18px;
+    font-weight: 900;
+  }
+
+  input[type=text]{
+    font-size: 18px;
+    margin-bottom: 10px;
   }
 }
