--- a/mLingo/ClientApp/src/components/styles/Main.scss
+++ b/mLingo/ClientApp/src/components/styles/Main.scss
@@ -62,6 +62,13 @@ main.container{
   .searchbuttontext{
     display: none;
   }
+  .navbar--dark {
+    padding: 15px 5px;
+  }
+
+  .navbar__buttons {
+    width: 70%;
+  }
 }
 
 @media (min-width: $desktop-res) {
