--- a/mLingo/ClientApp/src/components/styles/css/Main.css
+++ b/mLingo/ClientApp/src/components/styles/css/Main.css
@@ -163,6 +163,40 @@ main.container {
 
 /* Layout Components */
 /* 1. AppNavbar.js */
+@media (min-width: 576px) {
+  .navbar--dark {
+    max-width: 540px;
+  }
+}
+
+@media (min-width: 577px) {
+  .navbar--dark {
+    max-width: 480px;
+    height: 80px;
+  }
+}
+
+@media (min-width: 768px) {
+  .navbar--dark {
+    max-width: 600px;
+    height: 100px;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar--dark {
+    max-width: 720px;
+    height: 100px;
+  }
+}
+
+@media (min-width: 1199px) {
+  .navbar--dark {
+    max-width: 960px;
+    height: 100px;
+  }
+}
+
 /* MODAL */
 .show {
   opacity: 1;
@@ -171,9 +205,6 @@ main.container {
 @media (max-width: 576px) {
   .navbar__brand--text {
     font-size: 14px !important;
-  }
-  .searchbuttontext {
-    display: none;
   }
   .navbar--dark {
     padding: 15px 5px;
@@ -189,9 +220,9 @@ main.container {
   }
 }
 
-@media (min-width: 991px) {
-  .navbar--dark {
-    height: 100px;
+@media (max-width: 991px) {
+  .searchbuttontext {
+    display: none;
   }
 }
 
@@ -310,6 +341,7 @@ main.container {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin: 0 auto;
 }
 
 .navbar__registerbutton {
