--- a/mLingo/ClientApp/src/components/styles/Main.scss
+++ b/mLingo/ClientApp/src/components/styles/Main.scss
@@ -486,6 +486,23 @@ input[type="checkbox"]:checked + label:before {
 /* Login Panel */
 
 /* Main Panel */
+
+.yourcollections{
+  display: flex;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding: 50px 0;
+  width: 1000px;
+}
+
+.mainpanel__userbase{
+  section{
+    box-shadow: 0px 6px 8px #00000029;
+    border-radius: 25px;
+    padding: 50px;
+  }
+}
+
 @media (max-width: $mobile-res) {
   .mainpanel{
     display: flex;
@@ -510,18 +527,31 @@ input[type="checkbox"]:checked + label:before {
     align-items: center;
   }
   .mainpanel__userbase{
-    border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     padding: 50px;
-    width: 300px;
   }
 }
-.mainpanel__userbase button{
-  @include bluebutton;
+
+.yourcollections div.card{
+  border: 4px solid $dark-blue;
+  width: 150px;
+  height: 150px;
+  margin: 0 30px;
+  background: $light-green;
+  border-radius: 25px;
+  text-align: center;
 }
+
+.yourcollections h5,h6{
+   color: $dark-blue;
+}
+.yourcollections h5{
+  font-weight: 900;
+}
+
 
 .searchcollectioninput{
   margin: 20px;
