--- a/mLingo/ClientApp/src/components/styles/css/Main.css
+++ b/mLingo/ClientApp/src/components/styles/css/Main.css
@@ -673,6 +673,23 @@ li.media h4 {
 
 /* Login Panel */
 /* Main Panel */
+.yourcollections {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow-x: auto;
+  overflow-y: hidden;
+  padding: 50px 0;
+  width: 1000px;
+}
+
+.mainpanel__userbase section {
+  -webkit-box-shadow: 0px 6px 8px #00000029;
+          box-shadow: 0px 6px 8px #00000029;
+  border-radius: 25px;
+  padding: 50px;
+}
+
 @media (max-width: 576px) {
   .mainpanel {
     display: -webkit-box;
@@ -716,7 +733,6 @@ li.media h4 {
             align-items: center;
   }
   .mainpanel__userbase {
-    border: 1px solid black;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -729,34 +745,25 @@ li.media h4 {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     padding: 50px;
-    width: 300px;
   }
 }
 
-.mainpanel__userbase button {
-  font-size: 24px;
-  font-weight: bold;
-  text-shadow: 0.1em 0.1em 0.2em black;
-  background-color: inherit;
-  border: 0;
-  color: white;
-  outline: none !important;
-  background: #000536;
-  height: 60px;
-  border-radius: 5px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+.yourcollections div.card {
+  border: 4px solid #000536;
+  width: 150px;
+  height: 150px;
+  margin: 0 30px;
+  background: #B6EE1A;
+  border-radius: 25px;
+  text-align: center;
 }
 
-.mainpanel__userbase button:hover {
-  color: #B6EE1A;
-  text-decoration: none !important;
+.yourcollections h5, h6 {
+  color: #000536;
 }
 
-@media (max-width: 576px) {
-  .mainpanel__userbase button {
-    font-size: 16px !important;
-  }
+.yourcollections h5 {
+  font-weight: 900;
 }
 
 .searchcollectioninput {
