--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -1,6 +1,48 @@
 @import "./variables.scss";
 
 
+/* MENU */
+
+/* Components */
+
+/* Card Components */
+/* 1.1 CardComponent.js */
+/* 1.2 Collection.js */
+/* 1.3 Flashcard.js */
+/* 1.4 UserCreateCard.js */
+
+/* Form Components */
+/* 2.1 FormField.js */
+/* 2.2 Login.js */
+/* 2.3 Register.js */
+
+/* LandPage Components */
+/* 3.1 Formular.js */
+/* 3.2 Promo.js */
+/* 3.3 SignInModal.js */
+/* 3.4 Slider.js */
+/* 3.5 UserPromo.js */
+
+/* Layout Components */
+/* 4.1 AppNavbar.js */
+/* 4.2 Footer.js */
+
+/* Pages Components */
+/* 5.1 Search.js */
+/* 5.2 UserCreate.js */
+/* 5.3 UserHead.js */
+
+/* Search Components */
+/* 6.1 SearchInput.js */
+
+/* UserBase Components */
+/* 7.1 UserSection.js */
+
+
+/* layouts */
+/* 8.1 Layout.js */
+
+
 
 /* MENU */
 
@@ -29,6 +71,7 @@
   background-color: $dark-blue;
   position: absolute;
   width: 100%;
+  min-height: 100%;
   left: 0;
   top: 0;
   z-index: -999;
@@ -493,6 +536,17 @@ input[type="checkbox"]:checked + label:before {
   overflow-y: hidden;
   padding: 50px 0;
   width: 1000px;
+
+  /* hide scrollbar */
+
+    &::-webkit-scrollbar {
+      width: 0px;  /* Remove scrollbar space */
+      background: transparent;  /* Optional: just make scrollbar invisible */
+    }
+    /* Optional: show position indicator in red */
+    &::-webkit-scrollbar-thumb {
+        background: transparent;
+    }
 }
 
 .mainpanel__userbase{
@@ -539,7 +593,7 @@ input[type="checkbox"]:checked + label:before {
   border: 4px solid $dark-blue;
   width: 150px;
   height: 150px;
-  margin: 0 30px;
+  margin: 0 60px 0 0 ;
   background: $light-green;
   border-radius: 25px;
   text-align: center;
