--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -786,7 +786,12 @@ input[name=collectionName] {
 }
 
 /* 5.3 UserHead.js */
+.mainpanel__userbase {
+  max-width: 100%;
+}
+
 .mainpanel__userbase section {
+  max-width: 100%;
   -webkit-box-shadow: 0px 6px 8px #00000029;
           box-shadow: 0px 6px 8px #00000029;
   border-radius: 25px;
