--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -931,26 +931,29 @@ input[name=collectionName] {
 }
 
 .yourcollections div.card {
-  border: 4px solid #000536;
   width: 150px;
   height: 150px;
   margin: 0 60px 0 0;
-  background: #B6EE1A;
+  background: url("../../img/studyset.png");
   border-radius: 25px;
-  text-align: center;
-  text-align: center;
-  max-width: 200px;
-  padding-left: 12px;
-  padding-right: 12px;
-  font-size: 16px;
-  z-index: 100;
-  white-space: nowrap;
+  border: 0;
+}
+
+.yourcollections div.card div.card-body {
+  padding: 25px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
 }
 
 .yourcollections h5, h6 {
