--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -757,6 +757,7 @@ input[name=collectionName]{
   padding: 50px 0;
   display: flex;
   text-align: center;
+  align-items: center;
   flex-wrap: nowrap;
   overflow-x: auto;
   overflow-y: hidden;
@@ -795,6 +796,10 @@ input[name=collectionName]{
 }
 .yourcollections h5{
   font-weight: 900;
+}
+.yourcollections button{
+  min-width: 200px;
+  max-height: 60px;
 }
 
 //////////////////////////////////////////////////////////////////
