--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -911,6 +911,9 @@ input[name=collectionName] {
   display: -ms-flexbox;
   display: flex;
   text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   overflow-x: auto;
@@ -962,6 +965,11 @@ input[name=collectionName] {
 
 .yourcollections h5 {
   font-weight: 900;
+}
+
+.yourcollections button {
+  min-width: 200px;
+  max-height: 60px;
 }
 
 /* layouts */
