--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -679,6 +679,7 @@ input[name=collectionName]{
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 30%;
   }
   .mainpanel__userbase{
     display: flex;
@@ -750,7 +751,22 @@ input[name=collectionName]{
 //////////////////////////////////////////////////////////////////
 
 //////////////////////////////////////////////////////////////////
+/* 7.0 UserMenu.js */
+//////////////////////////////////////////////////////////////////
+
+.UserMenu{
+}
+
+//////////////////////////////////////////////////////////////////
 /* 7.1 UserSection.js */
+//////////////////////////////////////////////////////////////////
+
+.UserSection{
+  margin: 0px 0px 120px 0px;
+}
+
+//////////////////////////////////////////////////////////////////
+/* 7.1.2 StudySetsSection.js */
 //////////////////////////////////////////////////////////////////
 
 .yourcollections{
@@ -825,6 +841,11 @@ main.container{
   background-color: #F8F8F8;
   overflow: hidden;
   padding: 50px;
+  position: relative;
+}
+main.user--container{
+  display: flex;
+  padding: 0px !important;
 }
 
 @media(min-width: 576px){
