--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -679,7 +679,7 @@ input[name=collectionName]{
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 30%;
+    max-width: 33%;
   }
   .mainpanel__userbase{
     display: flex;
@@ -755,6 +755,34 @@ input[name=collectionName]{
 //////////////////////////////////////////////////////////////////
 
 .UserMenu{
+  background-color: white;
+  box-shadow: 0px 6px 8px #00000029;
+
+  & div{
+    padding: 10px 15px;
+  }
+
+  h2{
+    font-size: 28px;
+    font-weight: 900;
+    padding: 25px 25px 5px 25px;
+  }
+
+  .category{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 18px;
+    border-top: 1px solid #00000029;
+
+    a{
+      font-size: 18px;
+      color: #000536;
+      white-space: nowrap;
+      margin-left: 10px;
+    }
+  }
 }
 
 //////////////////////////////////////////////////////////////////
