--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -839,7 +839,7 @@ input[name=collectionName] {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    max-width: 30%;
+    max-width: 33%;
   }
   .mainpanel__userbase {
     display: -webkit-box;
@@ -906,6 +906,44 @@ input[name=collectionName] {
 
 /* UserBase Components */
 /* 7.0 UserMenu.js */
+.UserMenu {
+  background-color: white;
+  -webkit-box-shadow: 0px 6px 8px #00000029;
+          box-shadow: 0px 6px 8px #00000029;
+}
+
+.UserMenu div {
+  padding: 10px 15px;
+}
+
+.UserMenu h2 {
+  font-size: 28px;
+  font-weight: 900;
+  padding: 25px 25px 5px 25px;
+}
+
+.UserMenu .category {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  font-size: 18px;
+  border-top: 1px solid #00000029;
+}
+
+.UserMenu .category a {
+  font-size: 18px;
+  color: #000536;
+  white-space: nowrap;
+  margin-left: 10px;
+}
+
 /* 7.1 UserSection.js */
 .UserSection {
   margin: 0px 0px 120px 0px;
