--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -754,7 +754,7 @@ input[name=collectionName]{
 /* 7.0 UserMenu.js */
 //////////////////////////////////////////////////////////////////
 
-.UserMenu{
+.usermenu{
   background-color: white;
   box-shadow: 0px 6px 8px #00000029;
 
@@ -762,13 +762,13 @@ input[name=collectionName]{
     padding: 10px 15px;
   }
 
-  h2{
+  & h2{
     font-size: 28px;
     font-weight: 900;
     padding: 25px 25px 5px 25px;
   }
 
-  .category{
+   .category{
     width: 100%;
     display: flex;
     align-items: center;
@@ -781,6 +781,33 @@ input[name=collectionName]{
       color: #000536;
       white-space: nowrap;
       margin-left: 10px;
+    }
+  }
+  @media(min-width:768px){
+    .navbar-toggler{
+      display:none;
+    }
+  }
+
+  @media(max-width: 767px){
+    .navbar-toggler-icon{
+      position: relative;
+      padding: 10px;
+      height: 30px;
+    }
+
+    .navbar-toggler-icon:after,.navbar-toggler-icon:before {
+      content:'';
+      position: absolute;
+      z-index: 999;
+      top: 10px;
+      left: 0;
+      width: 100%;
+      height: 2px;
+      background-color: $dark-blue;
+    }
+    .navbar-toggler-icon:after{
+      top: 20px;
     }
   }
 }
@@ -876,9 +903,14 @@ main.user--container{
   padding: 0px !important;
 }
 
-@media(min-width: 576px){
+@media(min-width: 768px){
   main.container{
     border-radius: 70px;
+  }
+}
+@media(max-width:767px){
+  main.container{
+    max-width: 100%;
   }
 }
 
