--- a/mLingo/ClientApp/src/styles/css/Main.css
+++ b/mLingo/ClientApp/src/styles/css/Main.css
@@ -906,23 +906,23 @@ input[name=collectionName] {
 
 /* UserBase Components */
 /* 7.0 UserMenu.js */
-.UserMenu {
+.usermenu {
   background-color: white;
   -webkit-box-shadow: 0px 6px 8px #00000029;
           box-shadow: 0px 6px 8px #00000029;
 }
 
-.UserMenu div {
+.usermenu div {
   padding: 10px 15px;
 }
 
-.UserMenu h2 {
+.usermenu h2 {
   font-size: 28px;
   font-weight: 900;
   padding: 25px 25px 5px 25px;
 }
 
-.UserMenu .category {
+.usermenu .category {
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -937,11 +937,38 @@ input[name=collectionName] {
   border-top: 1px solid #00000029;
 }
 
-.UserMenu .category a {
+.usermenu .category a {
   font-size: 18px;
   color: #000536;
   white-space: nowrap;
   margin-left: 10px;
+}
+
+@media (min-width: 768px) {
+  .usermenu .navbar-toggler {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .usermenu .navbar-toggler-icon {
+    position: relative;
+    padding: 10px;
+    height: 30px;
+  }
+  .usermenu .navbar-toggler-icon:after, .usermenu .navbar-toggler-icon:before {
+    content: '';
+    position: absolute;
+    z-index: 999;
+    top: 10px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background-color: #000536;
+  }
+  .usermenu .navbar-toggler-icon:after {
+    top: 20px;
+  }
 }
 
 /* 7.1 UserSection.js */
@@ -1044,9 +1071,15 @@ main.user--container {
   padding: 0px !important;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 768px) {
   main.container {
     border-radius: 70px;
+  }
+}
+
+@media (max-width: 767px) {
+  main.container {
+    max-width: 100%;
   }
 }
 
