--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -651,9 +651,8 @@ input[name=collectionName]{
   max-width: 100%;
   section{
     max-width: 100%;
-    box-shadow: 0px 6px 8px #00000029;
-    border-radius: 25px;
     padding: 50px;
+    background-color: white;
   }
 }
 
@@ -664,13 +663,9 @@ input[name=collectionName]{
     align-items: center;
   }
   .mainpanel__userbase{
-    border: 1px solid black;
-    display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    padding: 50px;
-    width: 300px;
   }
 }
 
@@ -687,6 +682,12 @@ input[name=collectionName]{
     align-items: center;
     flex-wrap: wrap;
     padding: 50px;
+
+    section{
+      box-shadow: 0px 6px 8px #00000029;
+      border-radius: 25px;
+      padding: 20px;
+    }
   }
 }
 
@@ -757,6 +758,12 @@ input[name=collectionName]{
 .usermenu{
   background-color: white;
   box-shadow: 0px 6px 8px #00000029;
+
+  @media(max-width: $tablet-res){
+    div.collapse, div.collapsing{
+      width: 100vw;
+    }
+  }
 
   & div{
     padding: 10px 15px;
@@ -871,6 +878,21 @@ input[name=collectionName]{
 .yourcollections button{
   min-width: 200px;
   max-height: 60px;
+}
+
+.plus-button{
+  background-color: $light-green;
+  color: $dark-blue;
+  border: 5px solid $dark-blue;
+  font-weight: 800;
+  font-size: 28px;
+  border-radius: 50%;
+  padding: 5px 12px;
+  transition: 0.5s;
+}
+.plus-button:hover{
+  color: $dark-blue;
+  background-color: $dark-green;
 }
 
 //////////////////////////////////////////////////////////////////
