--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -22,6 +22,7 @@
 /* 3.3 SignInModal.js */
 /* 3.4 Slider.js */
 /* 3.5 UserPromo.js */
+/* 3.6 WelcomeSection.js */
 
 /* Layout Components */
 /* 4.1 AppNavbar.js */
@@ -405,6 +406,102 @@ li.media h4 {
   h3 {
     line-height: 1.6;
     text-align: center;
+  }
+}
+
+//////////////////////////////////////////////////////
+/* 3.6 WelcomeSection.js */
+//////////////////////////////////////////////////////
+
+
+
+div.welcome-section{
+  width: 100%;
+  background: url('../../img/landpage1.png')no-repeat center center;
+  background-size: 100% 100%;
+  object-fit: cover;
+  min-height: 494px;
+
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  &>div{
+    max-width:50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    padding-right: 80px;
+
+  h2{
+    font-size: 32px;
+    text-align: left;
+    font-weight: bold;
+    color: $light-blue;
+  }
+  p{
+    font-size: 16px;
+    max-width: 350px;
+    color: $light-blue;
+  }
+  }
+
+}
+
+@media(min-width: 1200px){
+  div.welcome-section{
+    min-height: 618px;
+  }
+}
+
+@media(max-width:$tablet-res){
+  div.welcome-section{
+    min-height: 371px;
+
+    &>div h2{
+      font-size: 22px;
+    }
+    &>div p{
+      font-size: 12px;
+    }
+  }
+}
+
+
+@media(max-width: $mobile-res){
+  div.welcome-section{
+    min-height: 297px;
+
+    &>div{
+      padding-right: 0px;
+    }
+
+    &>div h2{
+      font-size: 18px;
+    }
+    &>div p{
+      font-size: 10px;
+    }
+  }
+
+}
+
+// Iphone number Plus models and lower
+@media(max-width:415px){
+  div.welcome-section{
+    max-height: 214px;
+
+    &>div{
+      padding-right: 0px;
+    }
+
+    &>div h2{
+      font-size: 16px;
+    }
+    &>div p{
+      font-size: 10px;
+    }
   }
 }
 
@@ -934,6 +1031,11 @@ main.user--container{
   main.container{
     max-width: 100%;
   }
+}
+
+// Landpage layout
+.container.p-0>div{
+  padding: 50px;
 }
 
 
