Implement Flashcard design x<1000px

--- a/mLingo/ClientApp/src/schema/styles/variables.scss
+++ b/mLingo/ClientApp/src/schema/styles/variables.scss
@@ -146,3 +146,26 @@ a:hover, a:focus, a:checked{
     bottom: 10%;
   }
 }
+
+
+
+.remove-button{
+  font-size: 24px;
+  color: $dark-blue;
+  background-color: #F8F8F8;
+  border: 0;
+
+  &:hover,
+  &:focus {
+    background: #F8F8F8;
+  }
+
+  &:focus {
+    outline: 1px solid #F8F8F8;
+    outline-offset: -4px;
+  }
+
+  &:active {
+    transform: scale(0.99);
+  }
+}
