--- a/mLingo/ClientApp/src/schema/styles/Main.scss
+++ b/mLingo/ClientApp/src/schema/styles/Main.scss
@@ -64,6 +64,33 @@
 /* 1.3 Flashcard.js */
 //////////////////////////////////////////////////////
 
+.flashcard{
+
+  height: 200px;
+  padding: 20px;
+  background: white;
+  border-radius: 25px;
+  box-shadow: 0px 6px 8px #00000029;
+  margin: 20px;
+
+  .flashcard--title{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  h2{
+    color: $dark-blue;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  h5{
+    color: $light-green;
+    font-size:12px;
+  }
+
+}
+
 //////////////////////////////////////////////////////
 /* 1.4 UserCreateCard.js */
 //////////////////////////////////////////////////////
@@ -75,11 +102,7 @@
   }
 
   .flashsquare{
-    width: 200px;
-    height: 200px;
-    border: 3px solid $dark-blue;
-    border-radius: 15px;
-    background: $light-green;
+    transform: scale(0.8);
   }
 
   button{
